--- a/project/OSFR02.ioc
+++ b/project/OSFR02.ioc
@@ -26,9 +26,11 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
 Dma.RequestsNb=1
+FREERTOS.BinarySemaphores01=keySem
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,FootprintOK
-FREERTOS.Tasks01=led1Task,0,128,vLed1Task,As weak,NULL,Dynamic,NULL,NULL;led2Task,0,128,vLed2Task,Default,NULL,Dynamic,NULL,NULL;led3Task,0,128,vLed3Task,Default,NULL,Dynamic,NULL,NULL;led4Task,0,128,vLed4Task,Default,NULL,Dynamic,NULL,NULL;printfTask,0,128,vPrintfTask,Default,NULL,Dynamic,NULL,NULL;sensor1Task,1,128,vSensor1Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.HEAP_NUMBER=1
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,FootprintOK,BinarySemaphores01,HEAP_NUMBER
+FREERTOS.Tasks01=led1Task,0,128,vLed1Task,Default,NULL,Dynamic,NULL,NULL;led2Task,0,128,vLed2Task,Default,NULL,Dynamic,NULL,NULL;led3Task,0,128,vLed3Task,Default,NULL,Dynamic,NULL,NULL;led4Task,0,128,vLed4Task,Default,NULL,Dynamic,NULL,NULL;printfTask,0,128,vPrintfTask,Default,NULL,Dynamic,NULL,NULL;sensor1Task,1,128,vSensor1Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=10240
 FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
@@ -58,7 +60,7 @@ Mcu.Pin18=VP_ADC1_TempSens_Input
 Mcu.Pin19=VP_ADC1_Vref_Input
 Mcu.Pin2=PF8
 Mcu.Pin20=VP_FREERTOS_VS_ENABLE
-Mcu.Pin21=VP_SYS_VS_tim6
+Mcu.Pin21=VP_SYS_VS_tim7
 Mcu.Pin3=PF9
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
@@ -72,8 +74,9 @@ Mcu.UserName=STM32F103ZETx
 MxCube.Version=4.21.0
 MxDb.Version=DB.4.0.210
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:true\:true\:1\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI9_5_IRQn=true\:15\:0\:true\:true\:true\:2\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -81,9 +84,9 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true
-NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TimeBase=TIM6_IRQn
-NVIC.TimeBaseIP=TIM6
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TimeBase=TIM7_IRQn
+NVIC.TimeBaseIP=TIM7
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
@@ -146,10 +149,12 @@ PF9.GPIOParameters=GPIO_Label
 PF9.GPIO_Label=LED4
 PF9.Locked=true
 PF9.Signal=GPIO_Output
-PG6.GPIOParameters=GPIO_Label
+PG6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PG6.GPIO_Label=USER_BUTTON
+PG6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PG6.GPIO_PuPd=GPIO_PULLUP
 PG6.Locked=true
-PG6.Signal=GPIO_Input
+PG6.Signal=GPXTI6
 PG8.GPIOParameters=GPIO_Label
 PG8.GPIO_Label=SEL_JOY
 PG8.Locked=true
@@ -208,6 +213,8 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
@@ -216,6 +223,6 @@ VP_ADC1_Vref_Input.Mode=IN-Vrefint
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
-VP_SYS_VS_tim6.Mode=TIM6
-VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_SYS_VS_tim7.Mode=TIM7
+VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 board=OSFR02
