--- a/project/OSFR02.ioc
+++ b/project/OSFR02.ioc
@@ -30,8 +30,9 @@ FREERTOS.BinarySemaphores01=keySem
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=1
 FREERTOS.INCLUDE_eTaskGetState=1
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,FootprintOK,BinarySemaphores01,HEAP_NUMBER,Mutexes01,INCLUDE_eTaskGetState
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,FootprintOK,BinarySemaphores01,HEAP_NUMBER,Mutexes01,INCLUDE_eTaskGetState,Queues01
 FREERTOS.Mutexes01=mutex01
+FREERTOS.Queues01=queue01,1,uint16_t,NULL,Dynamic,NULL,NULL
 FREERTOS.Tasks01=led1Task,0,128,vLed1Task,Default,NULL,Dynamic,NULL,NULL;led2Task,0,128,vLed2Task,Default,NULL,Dynamic,NULL,NULL;led3Task,0,128,vLed3Task,Default,NULL,Dynamic,NULL,NULL;led4Task,0,128,vLed4Task,Default,NULL,Dynamic,NULL,NULL;printfTask,0,128,vPrintfTask,Default,NULL,Dynamic,NULL,NULL;sensor1Task,1,128,vSensor1Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=10240
 FREERTOS.configUSE_TRACE_FACILITY=1
