--- a/project/OSFR02.ioc
+++ b/project/OSFR02.ioc
@@ -175,7 +175,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103ZETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.4.0
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
